# SmolBoiHydrogenLine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
baremetal/: CMakeLists.txt
radioastro_hl/: CMakeLists.txt
radioastro_hl/src/: main.cpp
